---------------------------------------------------------------------------------------------------
Version: 0.1.30
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.1.29
Date: 2024-02-16
  Changes:
    - Correct rounding for quality bonuses
  Bug fixes:
    - Fix for empty quality bonus string
    - Fix for hand-crafting recipes with forbidden quality
---------------------------------------------------------------------------------------------------
Version: 0.1.28
Date: 2024-01-29
  Changes:
    - Ordered settings rather than random
    - Support for quality on friendly units
    - Added setting for disabling beacon overlay
  Bug fixes
    - Support "no quality" on armors
    - Support "no quality" on quality enhancing buildings
---------------------------------------------------------------------------------------------------
Version: 0.1.27
Date: 2024-01-27
  Changes:
    - Reduce number of recipes created
---------------------------------------------------------------------------------------------------
Version: 0.1.26
Date: 2024-01-23
  Changes:
    - Delevelers now default to reducing non-science pack items by one level. Added setting to control this.
    - Changed deleveler color to better fit the building
    - New calculation of quality module bonuses (supports quality bonus over 100%)
    - Support for quality virtual signals
---------------------------------------------------------------------------------------------------
Version: 0.1.25
Date: 2024-01-16
  Changes:
    - Handle recycling of items with non-stackable ingredients
    - Setting for "no quality" items/groups/subgroups for simpler interoperability
  Bug fixes:
    - Extra quality bonus for underground pipe now supports weird underground pipes
    - Fixed handling of energy values without exponent
    - Fixed "main product" issue when handling normal/expensive recipes
  Compatibility: