@@ -9,6 +9,8 @@ jq-quality-no-quality-groups=Groups to disable quality for
 jq-quality-no-quality-subgroups=Subgroups to disable quality for
 jq-delevel-to-normal=Delevel items to multiple normals
 jq-beacon-overlay=Enable beacon module quality overlay
+jq-indicator-proximity-distance=Proximity quality overlays distance
+jq-indicator-proximity-tick=Proximity overlay tick cycle
 
 [mod-setting-description]
 jq-use-extra-bonuses=Enables several balanced quality bonuses that were not indicated in the quality FFF
@@ -21,6 +23,8 @@ jq-quality-no-quality-groups=Names of groups of items to disable quality for, se
 jq-quality-no-quality-subgroups=Names of subgroups of items to disable quality for, separated by commas
 jq-delevel-to-normal=When enabled, all items are deleveled to several normal items. When disabled, non-science pack lose just one level.
 jq-beacon-overlay=When enabled, a colorful overlay shows the quality of the modules placed in the beacon. Disable for compatibility mods that modify beacons.
+jq-indicator-proximity-distance=Only show quality overlays at this distance from player or selected entity. Use "-1" to always show. Needed only when performance is low.
+jq-indicator-proximity-tick=Only calculate proxity every X ticks. Increase when performance is low.
 
 [jq]
 quality-1=Normal
